--- a/app/src/main/res/layout/activity_pothole_details.xml
+++ b/app/src/main/res/layout/activity_pothole_details.xml
@@ -30,216 +30,217 @@
     </androidx.appcompat.widget.Toolbar>
 
 
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/cardView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="8dp"-->
-<!--        android:layout_marginLeft="8dp"-->
-<!--        android:layout_marginRight="8dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:elevation="0.5dp"-->
-<!--        android:background="@drawable/image_background">-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
+            <!--    <androidx.cardview.widget.CardView-->
+            <!--        android:id="@+id/cardView"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:layout_marginBottom="8dp"-->
+            <!--        android:layout_marginLeft="8dp"-->
+            <!--        android:layout_marginRight="8dp"-->
+            <!--        android:layout_marginTop="15dp"-->
+            <!--        android:elevation="0.5dp"-->
+            <!--        android:background="@drawable/image_background">-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <RelativeLayout
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/image_background"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:minHeight="160dp"
-                    >
-
-                    <ImageView
-                        android:id="@+id/pic"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:minHeight="160dp"
-                        android:layout_margin="3dp"
-                        android:scaleType="fitXY" />
-
-                </RelativeLayout>
-
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="#4b4b4b"
-                            android:textStyle="bold"
-                            android:text="Date Reported on: "
-                            android:textSize="15sp"/>
-
-
-                        <TextView
-                            android:id="@+id/date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:textStyle="bold"
-                            android:textColor="#4b4b4b"
-                            android:textSize="15sp"/>
-                    </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height=".75dp"
-                        android:background="#B3B2B2"></RelativeLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="140dp"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="3dp">
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/image_background"
+                        android:minHeight="160dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <ImageView
+                            android:id="@+id/pic"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
-                            android:text="Traffic: "
-                            android:textSize="15sp"/>
+                            android:layout_margin="3dp"
+                            android:minHeight="160dp"
+                            android:scaleType="fitXY" />
 
-
-                        <TextView
-                            android:id="@+id/traffic"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="15sp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="3dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Severity: "
-                            android:textSize="15sp"/>
-
-
-                        <TextView
-                            android:id="@+id/severity"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="15sp"/>
-                    </LinearLayout>
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_marginTop="3dp"
-                        android:layout_height=".75dp"
-                        android:background="#B3B2B2"></RelativeLayout>
+                    </RelativeLayout>
 
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="horizontal">
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/freq"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:textColor="#4b4b4b"
-                            android:textSize="15sp"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginBottom="15dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Date Reported on: "
+                                android:textColor="#4b4b4b"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
+
+
+                            <TextView
+                                android:id="@+id/date"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textColor="#4b4b4b"
+                                android:textSize="15sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height=".75dp"
+                            android:background="#B3B2B2"></RelativeLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Traffic: "
+                                android:textSize="15sp" />
+
+
+                            <TextView
+                                android:id="@+id/traffic"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="15sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Severity: "
+                                android:textSize="15sp" />
+
+
+                            <TextView
+                                android:id="@+id/severity"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="15sp" />
+                        </LinearLayout>
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height=".75dp"
+                            android:layout_marginTop="3dp"
+                            android:background="#B3B2B2"></RelativeLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/freq"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textColor="#4b4b4b"
+                                android:textSize="15sp" />
+                        </LinearLayout>
+
+
                     </LinearLayout>
-
 
                 </LinearLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height=".75dp"
+                    android:background="#B3B2B2"></RelativeLayout>
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:maxLines="2"
+                    android:padding="8dp"
+                    android:text="Pothole Address"
+                    android:textAlignment="center"
+                    android:textColor="#4b4b4b"
+                    android:textSize="15sp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height=".75dp"
+                    android:background="#B3B2B2"></RelativeLayout>
+
             </LinearLayout>
 
-            <RelativeLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height=".75dp"
-                android:background="#B3B2B2"></RelativeLayout>
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Pothole Address"
-                android:maxLines="2"
-                android:textAlignment="center"
-                android:textSize="15sp"
-                android:textColor="#4b4b4b"
-                android:padding="8dp"
-                />
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height=".75dp"
-                android:background="#B3B2B2"></RelativeLayout>
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Current Status: "
+                    android:textColor="#4b4b4b"
+                    android:textSize="15sp" />
+
+
+                <TextView
+                    android:id="@+id/currentStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="#4b4b4b"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
+    </ScrollView>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Current Status: "
-            android:layout_gravity="center_vertical"
-            android:textColor="#4b4b4b"
-            android:textSize="15sp"/>
-
-
-        <TextView
-            android:id="@+id/currentStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textColor="#4b4b4b"
-            android:textSize="15sp"/>
-
-    </LinearLayout>
-
-
-
-</LinearLayout>
-</ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -263,8 +264,8 @@
 
         <ImageView
             android:id="@+id/reReportButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:textSize="13dp"
             android:textColor="#000"
             android:padding="8dp"
@@ -275,4 +276,5 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"/>
     </LinearLayout>
+
 </LinearLayout>
