--- a/app/src/main/res/layout/activity_pothole_report.xml
+++ b/app/src/main/res/layout/activity_pothole_report.xml
@@ -1,93 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PotholeDetails"
-    android:orientation="vertical">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#fff"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        android:elevation="1dp"
-        tools:ignore="NotSibling">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Report"
-            android:textSize="16dp"
-            android:textAppearance="@style/bebasRegular"
-            android:textStyle="bold"/>
-    </androidx.appcompat.widget.Toolbar>
-
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#f0f6ff">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PotholeReportActivity"
-    android:orientation="vertical"
-    >
-
+    android:textAlignment="center">
 
     <ImageView
         android:id="@+id/potholeImage"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="320dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="0dp"
+        android:alpha="0.4"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_menu_camera" />
 
     <Button
         android:id="@+id/takeImageButton"
-        android:layout_width="140dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="20dp"
-        android:padding="15dp"
+        android:layout_marginTop="20dp"
         android:text="Take Image"
-        android:background="@drawable/my_button_bg"
-        android:textColor="#fff"
-        android:textSize="15dp"
-        />
-
+        android:textSize="24sp"
+        android:layout_below="@+id/potholeImage"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:padding="20dp"
+        android:layout_weight="50"
+        android:layout_centerHorizontal="true"/>
     <LinearLayout
-        android:id="@+id/sevLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:id="@+id/sevLayout"
+        android:layout_below="@+id/takeImageButton"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
         <TextView
             android:id="@+id/sevText"
-            android:layout_width="fill_parent"
-            android:layout_height="44dp"
-            android:gravity="center_vertical"
-            android:layout_weight="2"
-            android:textColor="#000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
             android:text="Severenity"
-            android:textSize="18sp"
+            android:textSize="24sp"
+            android:layout_weight=".2"
             />
 
         <RelativeLayout
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="44dp"
             android:layout_marginLeft="25dp"
-            android:layout_weight="1"
+            android:layout_weight="100"
             android:background="@drawable/background"
             android:orientation="horizontal">
 
@@ -110,6 +76,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
+
                 android:src="@drawable/drop" />
 
         </RelativeLayout>
@@ -129,19 +96,19 @@
 
         <TextView
             android:id="@+id/trafficText"
-            android:layout_width="fill_parent"
-            android:layout_height="44dp"
-            android:gravity="center_vertical"
-            android:layout_weight="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight=".2"
+            android:gravity="center"
+            android:layout_marginTop="1dp"
             android:text="Traffic Zone"
-            android:textColor="#000"
-            android:textSize="18sp" />
+            android:textSize="24sp" />
 
         <RelativeLayout
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="44dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="25dp"
+            android:layout_weight="100"
+            android:layout_marginLeft="16dp"
             android:background="@drawable/background"
             android:orientation="horizontal">
 
@@ -156,8 +123,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@android:color/transparent"
                 android:gravity="center"
-                android:dropDownVerticalOffset="-53dp"
-                android:spinnerMode="dialog"/>
+                android:spinnerMode="dropdown" />
 
             <ImageView
                 android:layout_width="45dp"
@@ -174,17 +140,14 @@
 
     <Button
         android:id="@+id/reportButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_below="@+id/trafficLayout"
+        android:layout_marginTop="20dp"
         android:text="Report"
-        android:padding="8dp"
-        android:textSize="15dp"
-        android:background="@drawable/my_button_bg"
-        android:textColor="#fff"
-        android:layout_gravity="center_horizontal"/>
+        android:textSize="24sp"
+        android:layout_weight="50"
+        android:layout_centerHorizontal="true"/>
 
 
-</LinearLayout>
-    </ScrollView>
-</LinearLayout>
+</RelativeLayout>
